# backend/app.js
@@ -36,6 +36,7 @@ app.use('/admin', require('./routes/admin'));
 // app.use('/api/orders', require('./routes/orders'));
 app.use('/api/menu', require('./routes/menu'));
 app.use('/api/availability', require('./routes/availability'));
+app.use('/api/reservations', require('./routes/reservations'));
 
 // Gestion des erreurs 404
 app.use('*', (req, res) => {
